Bug 506830 - Incorrect text after removing the system tray widget says a desktop has been removed
Summary: Incorrect text after removing the system tray widget says a desktop has been ...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Tray widget (other bugs)
Version First Reported In: 6.3.5
Platform: Solus Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-09 22:35 UTC by TraceyC
Modified: 2025-08-14 13:48 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.5
Sentry Crash Report:


Attachments
System tray removal notification (147.17 KB, image/png)
2025-07-09 22:35 UTC, TraceyC
Details

Note You need to log in before you can comment on or make changes to this bug.
Description TraceyC 2025-07-09 22:35:57 UTC
Created attachment 183109 [details]
System tray removal notification

SUMMARY
After removing the system tray widget from a panel, the notification says "A Desktop has been removed"

STEPS TO REPRODUCE
1. Have / create a default panel
2. In edit mode, remove the system tray widget

OBSERVED RESULT
The notification says
"Plasma Desktop Workspace
Desktop removed
A Desktop has been removed"

EXPECTED RESULT
The notification should reference the system tray widget (as it does for other widgets) rather than "a desktop"

"Plasma Desktop Workspace
Widget Removed
The widget "system tray" been removed

I have seen this on 6.3.5 as well as git-master

Operating System: Solus 4.7
KDE Plasma Version: 6.3.5
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.1
Kernel Version: 6.14.11-320.current (64-bit)
                  
Operating System: Solus 4.7
KDE Plasma Version: 6.4.80
KDE Frameworks Version: 6.17.0
Qt Version: 6.9.1
Kernel Version: 6.14.11-320.current (64-bit)
Comment 1 Nate Graham 2025-08-14 13:34:40 UTC
Git commit 942990ff17baeb93b7cf670585db12cb1be31539 by Nate Graham, on behalf of Filip Kendes.
Committed on 14/08/2025 at 13:34.
Pushed by ngraham into branch 'master'.

Fix notification text when removing system tray from panel

Case for system tray and other custom embedded containment removal was not
covered, so the last else "Desktop removed" statement was being executed.
FIXED-IN: 6.4.5

M  +1    -1    src/plasma/private/applet_p.cpp

https://invent.kde.org/plasma/libplasma/-/commit/942990ff17baeb93b7cf670585db12cb1be31539
Comment 2 Nate Graham 2025-08-14 13:48:34 UTC
Git commit 48528c2fc00eb2a0b958311e070748619386298c by Nate Graham.
Committed on 14/08/2025 at 13:35.
Pushed by ngraham into branch 'Plasma/6.4'.

Fix notification text when removing system tray from panel

Case for system tray and other custom embedded containment removal was not
covered, so the last else "Desktop removed" statement was being executed.
FIXED-IN: 6.4.5


(cherry picked from commit 942990ff17baeb93b7cf670585db12cb1be31539)

b1b9abbe Fix notification text when removing system tray from panel

Co-authored-by: Filip Kendes <filip.kendes1@gmail.com>

M  +1    -1    src/plasma/private/applet_p.cpp

https://invent.kde.org/plasma/libplasma/-/commit/48528c2fc00eb2a0b958311e070748619386298c