Fix notification text when removing system tray from panel

Case for system tray and other custom embedded containment removal was not
covered, so the last else "Desktop removed" statement was being executed.

BUG: 506830
FIXED-IN: 6.4.5


(cherry picked from commit 942990ff17baeb93b7cf670585db12cb1be31539)

b1b9abbe Fix notification text when removing system tray from panel

Co-authored-by: Filip Kendes <filip.kendes1@gmail.com>